Feat (clinic): Add customer skin profile management
